fdo#78284 Content-type of ".png" images in Smart Art

Content-type for 'png' images was not getting added in
[Content_Types].xml. This was as  only 'jpeg' and 'wmf'
extensions were handled. Modified DocxSdrExport::writeDiagramRels
to handle all types of extensions.
Added UT for the same.

Reviewed on:
	https://gerrit.libreoffice.org/9252

Change-Id: I5e068d4db14f3a43be08a4b7c9bf265f388bf356